@@ -375,6 +375,13 @@ public class CoreConfiguration extends ConfigurationOptionProvider {
         .configurationCategory(CORE_CATEGORY)
         .description("A list of methods for which to create a transaction or span.\n" +
             "\n" +
+            "If you want to monitor a large number of methods,\n" +
+            "use  <<config-profiling-spans-enabled, `profiling_spans_enabled`>> instead.\n" +
+            "\n" +
+            "This works by instrumenting each matching method to include code that creates a span for the method.\n" +
+            "While creating a span is quite cheap in terms of performance,\n" +
+            "instrumenting a whole code base or a method which is executed in a tight loop leads to significant overhead.\n" +
+            "\n" +
             "The syntax is `modifier @fully.qualified.annotation.Name fully.qualified.class.Name#methodName(fully.qualified.parameter.Type)`.\n" +
             "You can use wildcards for the class name, the annotation name, the method name and the parameter types.\n" +
             "The `*` wildcard matches zero or more characters.\n" +
