@@ -1,1 +1,0 @@
-co.elastic.apm.agent.profiler.ThreadInfoStacktraceAccessor
