@@ -358,13 +358,29 @@ If you are seeing gaps in the span timeline and want to include certain methods,
 |Less flexible on it's own but can be combined with the API.
  Just get the <<api-current-span, current span>> on an annotated method and customize the span to your liking.
 
-|Configuration
+|Sampling-based profiler (incubating) added[1.13.0]
+|Leverages https://github.com/jvm-profiling-tools/async-profiler[async-profiler]
+ to periodically record which methods are running (stack traces).
+ Enable by setting <<config-profiling-spans-enabled, `profiling_spans_enabled`>> to `true`.
+|Very low overhead, no code changes required.
+ Great to find out which parts of the code make your application slow,
+ without having to apply application-specific configuration.
+|Does not work on Windows.
+ Only creates spans while a profiling session is ongoing.
+ This can be controlled via <<config-profiling-duration, `profiling_duration`>> and <<config-profiling-interval, `profiling_interval`>>.
+ The duration of profiler-inferred spans are not exact measurements, only estimates.
+ The accuracy depends on <<config-profiling-sampling-interval, `profiling_sampling_interval`>>.
+
+|Instrumentation-based profiler
 |Use the <<config-trace-methods, `trace_methods`>> configuration option to specify additional methods to instrument.
 |You don't need to modify the source code.
  That makes it possible to monitor code in 3rd party libraries.
  You can match  methods via wildcards in the package, class or method name,
  by their modifier (like `public`), by a particular annotation, and more.
-|Easy to overuse by matching too many methods which hurts performance. Use together with <<config-trace-methods-duration-threshold, `trace_methods_duration_threshold`>> if setting for entire packages instead of specific methods in order to reduce overhead and avoid having too many spans in the APM app.
+|Easy to overuse by matching too many methods which hurts both runtime and startup performance.
+ Use together with <<config-trace-methods-duration-threshold, `trace_methods_duration_threshold`>>
+ if setting for entire packages instead of specific methods in order to reduce overhead and avoid having too many spans in the APM app.
+
 
 |===
 
